<resources>
    <string name="app_name">Quiz</string>
    <string name="quizApp">Quiz App</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_name">Please enter your name:</string>
    <string name="johnson">Johnson</string>
    <string name="enter">Enter</string>
    <string name="image_of_a_flag">Image of a flag</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="image_of_a_trophy">image of a trophy</string>
    <string name="finish">Finish</string>
</resources>