<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrophyActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="308dp"
        android:layout_height="312dp"
        android:contentDescription="@string/image_of_a_trophy"
        android:src="@drawable/ic_trophy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hey_congratulations"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Gonzales"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Your score is 0 out of 10"
        android:textColor="#1B1919"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_margin="20dp"/>

</LinearLayout>